{
  "version": 4,
  "terraform_version": "1.8.2",
  "serial": 21,
  "lineage": "d10cd90c-9e2a-1795-8814-73f653380a72",
  "resources": [
    {
      "module": "module.aws_security_group_UB3-SUPPORT",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "urolime_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:039033235676:security-group/sg-0f4c053a306370f5c",
            "description": "Security group for Urolime with custom ingress and egress rules",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All IPv4 traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f4c053a306370f5c",
            "ingress": [
              {
                "cidr_blocks": [
                  "103.141.55.170/32"
                ],
                "description": "Javid Home Mongo",
                "from_port": 27017,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 27017
              },
              {
                "cidr_blocks": [
                  "13.201.234.188/32"
                ],
                "description": "Javid Home RabbitMQ MG...",
                "from_port": 15672,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 15672
              },
              {
                "cidr_blocks": [
                  "13.201.234.188/32"
                ],
                "description": "Javid Windows Jump",
                "from_port": 3389,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3389
              },
              {
                "cidr_blocks": [
                  "13.202.9.112/32"
                ],
                "description": "Javid Home",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "13.235.22.80/32"
                ],
                "description": "Aji - Realtime indexing",
                "from_port": 8093,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8093
              },
              {
                "cidr_blocks": [
                  "13.235.22.80/32"
                ],
                "description": "Aji Home Mongo DB",
                "from_port": 27017,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 27017
              },
              {
                "cidr_blocks": [
                  "13.235.22.80/32"
                ],
                "description": "Aji-Home RabbitMQ",
                "from_port": 15672,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 15672
              },
              {
                "cidr_blocks": [
                  "15.207.47.27/32"
                ],
                "description": "Core APIs from Aji",
                "from_port": 8090,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8095
              },
              {
                "cidr_blocks": [
                  "18.138.251.184/32"
                ],
                "description": "Jump",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "3.0.146.168/32"
                ],
                "description": "Test-img-jassi",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "5.195.234.162/32"
                ],
                "description": "Aji Home",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "65.0.226.115/32"
                ],
                "description": "Pugal windows",
                "from_port": 3389,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3389
              },
              {
                "cidr_blocks": [],
                "description": "Jump",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "LB-Route53-Alert",
                "from_port": 8091,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8091
              }
            ],
            "name": "UB3-SUPPORT-31334d56",
            "name_prefix": "",
            "owner_id": "039033235676",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "UB3-SUPPORT-31334d56"
            },
            "tags_all": {
              "Name": "UB3-SUPPORT-31334d56"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e30707940dc057a8"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.aws_security_group_jenkins",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "urolime_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:039033235676:security-group/sg-0d79bcaa6685bbe52",
            "description": "Security group for Urolime with custom ingress and egress rules",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "Outbound Custom TCP to UB3-SUPPORT",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-096d45bb39d0e778f"
                ],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [],
                "description": "Outbound HTTP to UB3-SUPPORT",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-096d45bb39d0e778f"
                ],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "Outbound HTTPS to UB3-SUPPORT",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-096d45bb39d0e778f"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "id": "sg-0d79bcaa6685bbe52",
            "ingress": [
              {
                "cidr_blocks": [
                  "103.104.44.50/32"
                ],
                "description": "Abraham",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "103.141.54.90/32"
                ],
                "description": "Abraham",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "103.151.188.6/32"
                ],
                "description": "Lalkrishna",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "103.165.167.227/32"
                ],
                "description": "Ajesh",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "103.176.184.13/32"
                ],
                "description": "Nandakishore",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "106.205.160.148/32"
                ],
                "description": "Hari",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "120.89.74.204/32"
                ],
                "description": "Alphons",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "122.161.29.191/32"
                ],
                "description": "ArunB",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "122.184.93.234/32"
                ],
                "description": "lalkrishna",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "13.234.254.76/32"
                ],
                "description": "Javid Jenkins",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "15.207.232.36/32"
                ],
                "description": "Aji",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "152.58.203.153/32"
                ],
                "description": "hari",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "152.58.219.139/32"
                ],
                "description": "Suhail",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "3.6.195.198/32"
                ],
                "description": "urolime bastion SSL Check",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "UB3-Jenkins-SG",
            "name_prefix": "",
            "owner_id": "039033235676",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "UB3-Jenkins-SG"
            },
            "tags_all": {
              "Name": "UB3-Jenkins-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e30707940dc057a8"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}